--- a/Startup_Files/startup.service
+++ b/Startup_Files/startup.service
@@ -2,7 +2,7 @@
 Description=GPIO Init ...
 
 [Service]
-ExecStart=/usr/bin/python3 /home/nvidia/Palletfinder/Startup_Files/Init_I_O.py
+ExecStart=/home/nvidia/Palletfinder/Startup_Files/Docker_start.sh start
 
 [Install]
 WantedBy=multi-user.target
