Prediction with new Thread

--- a/Startup_Files/init_docker.service
+++ b/Startup_Files/init_docker.service
@@ -2,8 +2,7 @@
 Description=Docker Init ...
 
 [Service]
-ExecStart=/home/nvidia/Palletfinder/Startup_Files/Docker_start.sh start
-
+ExecStart=/home/nvidia/Palletfinder/Startup_Files/Docker_start.sh
 
 [Install]
 WantedBy=multi-user.target
